@@ -1,3 +1,8 @@
+2004-10-14  Helmer Kraemer  <hkraemer@freenet.de>
+
+	* libraries/clib/native/System.c (java_lang_System_initProperties): 
+	don't crash if setlocale returns NULL
+	
 2004-10-12  Dalibor Topic <robilad@kaffe.org>
 
 	*  libraries/javalib/java/lang/SecurityManager.java:
